[package]
name = "grass"
version = "0.1.0"
authors = ["wulymammoth <861147+wulymammoth@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
env_logger = "0.8.1"
log = "0.4.11"
structopt = "0.3.20"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
tempfile = "3.1.0"
